--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                     </div>
                     <div class="col-md-9 col-xs-5">
-                        <img src="assets/images/stepe.png" alt="" class="indecopi">
+                        <img src="assets/images/stepe.PNG" alt="" class="indecopi">
                       </div>
               </div>
             </div>
